--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FilmesdaHora</title>
     <link rel="stylesheet" href="Estilos/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
 </head>
 <body>
-    <header>
+    <header onresize="mudouTamanho()">
         <h1>Filmes da Hora</h1>
-        <nav>
-            <menu>
+        <nav >
+            <span id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</span>
+            <menu id="itens">
                 <ul>
                     <li><a  href="#">Inicio</a></li>
                     <li><a  href="#">Filmes</a></li>
@@ -20,14 +22,17 @@
                 </ul>
             </menu>
         </nav>
+    </header>
         <main>
-            <div>
-                <div>
-                    <form action="pesq.php" method="post">
-                        <input type="text" required autocomplete="on">
-                        <button type="submit">Enviar</button>
-                    </form>
-                </div>
+            <div id="Pesq">
+                    <div id="pesq2">
+                        <form action="pesq.php" method="post">
+                            <div class="search"> 
+                                <input id="caixa" type="text" required autocomplete="on">
+                                <button id="int"></button>  
+                         </div>             
+                        </form>
+                    </div>
             </div>
             <div>
                 <div id="Filmes2025">
@@ -192,7 +197,23 @@
                 </div>
             </footer>
         </main>
-    </header>
-    
+        <script>
+        function mudouTamanho(){
+            if (window.innerWidth >=768){
+                itens.style.display = 'block'
+            } else{
+                itens.style.display = 'none'
+            }
+        }
+        function clickMenu() {
+            if (itens.style.display ==  'block'){
+                itens.style.display = 'none'
+
+            } else {
+                itens.style.display = 'block'
+
+            }
+        }
+    </script>
 </body>
 </html>
