--- a/index.html
+++ b/index.html
@@ -29,37 +29,37 @@
                         <form action="pesq.php" method="post">
                             <div class="search"> 
                                 <input id="caixa" type="text" required autocomplete="on">
-                                <button id="int"></button>  
+                                <button id="int"'1  1   111                                                     ></button>  
                          </div>             
                         </form>
                     </div>
             </div>
-            <div>
+            <div class="movies">
                 <div id="Filmes2025">
                     <h2>Filmes mais Populares de 2025</h2>
                     <div class="filmes">
                         <picture>
-                            <img src="" alt="">
+                            <img src="Filmes/Pecadores.jpg" alt="">
                         </picture>
                     </div>
                     <div class="filmes">
                         <picture>
-                            <img src="" alt="">
+                            <img src="Filmes/Pecadores.jpg" alt="">
                         </picture>
                     </div>
                     <div class="filmes">
                         <picture>
-                            <img src="" alt="">
+                            <img src="Filmes/Pecadores.jpg" alt="">
                         </picture>
                     </div>
                     <div class="filmes">
                         <picture>
-                            <img src="" alt="">
+                            <img src="Filmes/Pecadores.jpg" alt="">
                         </picture>
                     </div>    
                     <div class="filmes">
                         <picture>
-                            <img src="" alt="">
+                            <img src="Filmes/Pecadores.jpg" alt="">
                         </picture>
                     </div>
                 </div>
@@ -68,21 +68,21 @@
                         <h2>Proximos Lançamentos</h2>
                         <ul>
                             <li>
-                                <div>
-                                    <picture>
+                                <div class="fam">
+                                    <picture class="lancimg">
                                         <img src="" alt="">
                                     </picture>
                                     <h3>Vingadores:DoomDay</h3>
                                 </div>
                             </li>
                             <li>
-                                <a href="#">Demon Slayer Castelo Infinito</a>
+                                <a class="alink" href="#">Demon Slayer Castelo Infinito</a>
                             </li>
                             <li>
-                                <a href="#">The Batman:Part 2</a>
+                                <a class="alink" href="#">The Batman:Part 2</a>
                             </li>
                             <li>
-                                <a href="#">Toy Story 5</a>
+                                <a class="alink" href="#">Toy Story 5</a>
                             </li>
                         </ul>
                     </div>
