--- a/index.html
+++ b/index.html
@@ -89,27 +89,27 @@
                 </div>
             </div>
             <div id="series2025">
-                <div>
+                <div class="serie">
                     <h2>Series mais populares de 2025:</h2>
                     <div class="series">
                         <picture>
-                            <img src="" alt="">
+                            <img src="Series/Loki.jpg" alt="">
                         </picture>
                     </div>
                     <div class="series">
                         <picture>
-                            <img src="" alt="">
+                            <img src="Series/Loki.jpg" alt="">
                         </picture>
                     </div>
                     <div class="series">
                         <picture>
-                            <img src="" alt="">
+                            <img src="Series/Loki.jpg" alt="">
                         </picture>
                     </div>
                     
                     <div class="series">
                         <picture>
-                            <img src="" alt="">
+                            <img src="Series/Loki.jpg" alt="">
                         </picture>
                     </div>
                 </div>
