Atualização do Css primario

--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                 </div>
             </div>
             <div id="Atuacao">
-                <div>
+                <div class="att">
                     <div class="Atores">
                         <picture>
-                            <img src="" alt="">
+                            <img src="Atores/David.jpg" alt="">
                         </picture>
                         <h3>Ator 1</h3>
                     </div>
@@ -177,23 +177,25 @@
                     </div>
                 </div>
             </div>
-            <footer>
-                <div>
+            <footer id="link">
+                <div class="area">
+                    <div class="uteis">
                     <h4>Links Uteis</h4>
                     <ul>
                         <li><a href="#">Meus Projetos</a></li>
                         <li><a href="#">Imdb</a></li>
                         <li><a href="#">AdoroCinema</a></li>
                     </ul>
-                </div>
-                <div>
-                    <h4>Feito por: <a href="#">Luis Miguel</a> </h4>
-                </div>
-                <div>
-                    <h4>Aviso</h4>
-                    <p>
-                        Toda as informações que contem no site foi pesquisa pelos Sites de <i>Imdb</i> e <i>AdoroCinema</i> e são para apenas Entretenimento
-                    </p>
+                    </div>
+                    <div class="user">
+                        <h4>Feito por: <a href="#">Luis Miguel</a> </h4>
+                    </div>
+                    <div class="aviso">
+                        <h4>Aviso</h4>
+                        <p>
+                            Toda as informações que contem no site foi pesquisa pelos Sites de <i>Imdb</i> e <i>AdoroCinema</i> e são para apenas Entretenimento
+                        </p>
+                    </div>
                 </div>
             </footer>
         </main>
