Atualização do Media Querry

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                         <form action="pesq.php" method="post">
                             <div class="search"> 
                                 <input id="caixa" type="text" required autocomplete="on">
-                                <button id="int"'1  1   111                                                     ></button>  
+                                <button id="int"></button>  
                          </div>             
                         </form>
                     </div>
             </div>
             <div class="movies">
+                <h2>Filmes mais Populares de 2025</h2>
                 <div id="Filmes2025">
-                    <h2>Filmes mais Populares de 2025</h2>
                     <div class="filmes">
                         <picture>
                             <img src="Filmes/Pecadores.jpg" alt="">
@@ -63,29 +63,34 @@
                             <img src="Filmes/Pecadores.jpg" alt="">
                         </picture>
                     </div>
+                    <div class="filmes">
+                        <picture>
+                            <img src="Filmes/Pecadores.jpg" alt="">
+                        </picture>
+                    </div>
                 </div>
                 <div id="Lancamento">
+                    <h2>Proximos Lançamentos</h2>
                     <div class="Lanc">
-                        <h2>Proximos Lançamentos</h2>
-                        <ul>
-                            <li>
-                                <div class="fam">
-                                    <picture class="lancimg">
-                                        <img src="" alt="">
-                                    </picture>
-                                    <h3>Vingadores:DoomDay</h3>
-                                </div>
-                            </li>
-                            <li>
-                                <a class="alink" href="#">Demon Slayer Castelo Infinito</a>
-                            </li>
-                            <li>
-                                <a class="alink" href="#">The Batman:Part 2</a>
-                            </li>
-                            <li>
-                                <a class="alink" href="#">Toy Story 5</a>
-                            </li>
+                        <div class="fam">
+                            <picture class="lancimg">
+                                <img src="" alt="">
+                            </picture>
+                            <h3>Vingadores:DoomDay</h3>
+                        </div>
+                        <div class="PLanc">
+                            <ul> 
+                                <li>
+                                    <a class="alink" href="#">Toy Story 5</a>
+                                </li>
+                                <li>
+                                    <a class="alink" href="#">The Batman:Part 2</a>
+                                </li>
+                                <li>
+                                    <a class="alink" href="#">Demon Slayer Castelo Infinito</a>
+                                </li>
                         </ul>
+                        </div>
                     </div>
                 </div>
             </div>
