Atualização Media Querry

--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
                 </div>
             </div>
             <div id="Plataformas">
-                <div>
-                    <h2>Onde você pode Assistir:</h2>
+                <h2>Onde você pode Assistir:</h2>
+                <div class="Plata">
                     <div class="plat">
                         <picture>
-                            <img src="" alt="">
+                          <img src="" alt="">
                         </picture>
                         <h3>Netflix</h3>
                     </div>
