--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                         <form action="pesq.php" method="post">
                             <div class="search"> 
                                 <input id="caixa" type="text" required autocomplete="on">
-                                <button id="int"></button>  
                          </div>             
                         </form>
                     </div>
@@ -189,13 +188,13 @@
                     <div class="uteis">
                     <h4>Links Uteis</h4>
                     <ul>
-                        <li><a href="#">Meus Projetos</a></li>
-                        <li><a href="#">Imdb</a></li>
-                        <li><a href="#">AdoroCinema</a></li>
+                        <li><a id="links" href="#">Meus Projetos</a></li>
+                        <li><a id="links" href="#">Imdb</a></li>
+                        <li><a id="links" href="#">AdoroCinema</a></li>
                     </ul>
                     </div>
                     <div class="user">
-                        <h4>Feito por: <a href="#">Luis Miguel</a> </h4>
+                        <h4>Feito por: <a id="links" href="#">Luis Miguel</a> </h4>
                     </div>
                     <div class="aviso">
                         <h4>Aviso</h4>
