Atualização Final parte 2

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
                     </div>
             </div>
             <div class="movies">
-                <h2>Filmes mais Populares de 2025</h2>
+                <h2 class="text">Filmes mais Populares de 2025</h2>
                 <div id="Filmes2025">
-                    <div class="filmes">
+                    <div class="filmesgrid">
+                        <div class="filmes">
                         <picture>
                             <img src="Filmes/Pecadores.jpg" alt="">
                         </picture>
@@ -68,9 +69,10 @@
                             <img src="Filmes/Pecadores.jpg" alt="">
                         </picture>
                     </div>
+                    </div>
                 </div>
                 <div id="Lancamento">
-                    <h2>Proximos Lançamentos</h2>
+                    <h2 class="text">Proximos Lançamentos</h2>
                     <div class="Lanc">
                         <div class="fam">
                             <picture class="lancimg">
@@ -95,7 +97,7 @@
                 </div>
             </div>
             <div id="series2025">
-                <h2>Series mais populares de 2025:</h2>
+                <h2 class="text">Series mais populares de 2025:</h2>
                 <div class="serie">
                     <div class="series">
                         <picture>
@@ -152,7 +154,7 @@
                 </div>
             </div>
             <div id="Plataformas">
-                <h2>Onde você pode Assistir:</h2>
+                <h2 class="text">Onde você pode Assistir:</h2>
                 <div class="Plata">
                     <div class="plat">
                         <picture>
