--- a/index.html
+++ b/index.html
@@ -190,16 +190,16 @@
                     <div class="uteis">
                     <h4>Links Uteis</h4>
                     <ul>
-                        <li><a id="links" href="#">Meus Projetos</a></li>
-                        <li><a id="links" href="#">Imdb</a></li>
-                        <li><a id="links" href="#">AdoroCinema</a></li>
+                        <li><a class="links" href="#">Meus Projetos</a></li>
+                        <li><a class="links" href="#">Imdb</a></li>
+                        <li><a class="links" href="#">AdoroCinema</a></li>
                     </ul>
                     </div>
                     <div class="user">
-                        <h4>Feito por: <a id="links" href="#">Luis Miguel</a> </h4>
+                        <h4>Feito por: <a class="links" href="#">Luis Miguel</a> </h4>
                     </div>
                     <div class="aviso">
-                        <h4>Aviso</h4>
+                        <h4 class="links">Aviso</h4>
                         <p>
                             Toda as informações que contem no site foi pesquisa pelos Sites de <i>Imdb</i> e <i>AdoroCinema</i> e são para apenas Entretenimento
                         </p>
